# feanor

./: .gitignore  LICENSE  pack.py  pyproject.toml  readme.md  requirements.txt  stepDeps.drawio
.github/workflows/: OnRelease.yml
src/: __init__.py  __main__.py  builderTool.py  temp.py  version.py  virtualEnv.py
