[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "build-tool"
version = "{version}"
authors = [
  { name="Antoine Buirey", email="antoine.buirey@gmail.com" }
]
description = "Python script for simplify automatic build, tests, publish and deploy of projects."
readme = "readme.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://github.com/T0ine34/builder-tool"
issues = "https://github.com/T0ine34/builder-tool/issues"
source = "https://github.com/T0ine34/builder-tool"