[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "feanor"
version = "{version}"
authors = [
  { name="Antoine Buirey", email="antoine.buirey@gmail.com" }
]
description = "Python script for simplify automatic build, tests, publish and deploy of projects."
readme = "readme.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "gamuLogger",
    "feanorTempDir"
]

[project.urls]
homepage = "https://github.com/T0ine34/feanor"
issues = "https://github.com/T0ine34/feanor/issues"
source = "https://github.com/T0ine34/feanor"

[project.scripts]
feanor = "feanor.__main__:main"